[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/checkers-board.png" type="Texture" id=1]
[ext_resource path="res://sprites/black.png" type="Texture" id=2]
[ext_resource path="res://sprites/white.png" type="Texture" id=3]
[ext_resource path="res://scripts/main.gd" type="Script" id=4]
[ext_resource path="res://Bot.gd" type="Script" id=5]
[ext_resource path="res://sprites/black_wins.png" type="Texture" id=6]
[ext_resource path="res://sprites/white_wins.png" type="Texture" id=7]

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="board" type="Sprite" parent="."]
position = Vector2( 152, 168 )
texture = ExtResource( 1 )

[node name="white" type="Sprite" parent="."]
position = Vector2( 56, 24 )
scale = Vector2( 0.706897, 0.880952 )
texture = ExtResource( 3 )

[node name="black" type="Sprite" parent="."]
position = Vector2( 250.5, 23.6875 )
scale = Vector2( 0.732759, 0.910714 )
texture = ExtResource( 2 )

[node name="Labelwhite" type="Label" parent="."]
margin_left = 104.0
margin_top = 16.0
margin_right = 144.0
margin_bottom = 33.0
rect_pivot_offset = Vector2( 48, 24 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Labelblack" type="Label" parent="."]
margin_left = 160.0
margin_top = 16.0
margin_right = 200.0
margin_bottom = 33.0
rect_pivot_offset = Vector2( 48, 24 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ButtonBack" type="Button" parent="."]
margin_left = 1.0
margin_top = 285.0
margin_right = 21.0
margin_bottom = 305.0
text = "<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bot" type="Node" parent="."]
script = ExtResource( 5 )

[node name="End" type="CanvasLayer" parent="."]

[node name="white_wins" type="Sprite" parent="End"]
position = Vector2( 152, 152 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )

[node name="black_wins" type="Sprite" parent="End"]
position = Vector2( 152, 152 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 6 )
[connection signal="pressed" from="ButtonBack" to="." method="_on_ButtonBack_pressed"]
